--- a/zpoux001/src/App.css
+++ b/zpoux001/src/App.css
@@ -48,3 +48,10 @@
 .grid-row {
   margin-top: 5px;
 }
+
+.App-TableHeader::part(column) {
+  background-color: #F2F2F2;
+  border-top: 1px solid #E5E5E5;
+  border-bottom: 1px solid #E5E5E5;
+  border-left: 1px solid #E5E5E5;
+}
