指図/作業検索ヘルプ実装仕掛かり中

--- a/zpoux001/src/App.css
+++ b/zpoux001/src/App.css
@@ -53,5 +53,14 @@
   background-color: #F2F2F2;
   border-top: 1px solid #E5E5E5;
   border-bottom: 1px solid #E5E5E5;
+  border-right: 1px solid #E5E5E5;
   border-left: 1px solid #E5E5E5;
+}
+
+.dialog-search-box {
+  width: 400px;
+}
+
+.dialog-search-bar {
+  margin-bottom: 5px;
 }
